Actualizacion del Proyecto
Co-Authored-By: dayanahdz19 <103228024+dayanahdz19@users.noreply.github.com>
Co-Authored-By: FattiC24 <62962069+FattiC24@users.noreply.github.com>
Co-Authored-By: Joshua Galdamez <62961115+JoshuaGal2020@users.noreply.github.com>
Co-Authored-By: Mauri20 <69651999+Mauri20@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-#APP_DATABASE_URL= //Required
-#APP_PORT = //optional
+APP_DATABASE_URL=mongodb+srv://user:<password>@api-documentation.swaiv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+APP_PORT=8080
