--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "zeligstoreapi-nodejs",
+  "name": "api-rest",
   "version": "1.0.0",
-  "description": "This API REST is about the ZeligStore, based on NodeJs and another softwares.",
-  "main": "index.js",
+  "description": "Api created by create-rivas-node",
+  "main": "src/main.js",
+  "author": "rivaslive",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "dev": "nodemon -r esm src/main.js",
-    "start": "node esm src/main.js",
+    "dev": "nodemon --exec babel-node src/main.js",
+    "start": "node dist/main.js",
+    "build": "babel ./src -d dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format:check": "prettier --check .",
@@ -13,23 +17,20 @@
   },
   "dependencies": {
     "dotenv": "^14.2.0",
-    "esm": "^3.2.25",
     "express": "^4.17.2",
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
     "@types/node": "^17.0.10",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "8.2.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.25.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
-  },
-  "keywords": [
-    "ZeligStore",
-    "NodeJS",
-    "React"
-  ],
-  "author": "ZeligStore Oficial SV",
-  "license": "ISC"
+  }
 }
