--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "mongoose-paginate-v2": "^1.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
