--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 APP_DATABASE_URL=mongodb+srv://user:<password>@api-documentation.swaiv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 APP_PORT=8080
+APP_CLOUD_NAME=XXXXXXX
+APP_API_KEY=XXXXXXX
+APP_API_SECRET=XXXXXXX
