--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
+    "fs-extra": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
-    "mongoose-paginate-v2": "^1.6.3"
+    "mongoose-paginate-v2": "^1.6.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
