--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.16.11",
     "@types/node": "^17.0.10",
     "babel-plugin-module-resolver": "^4.1.0",
